<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">safety</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_sort_user">Ente your name</string>
    <string name="route_1">Route 1</string>
    <string name="route_2">Route 2</string>
    <string name="route_3">Route 3</string>
    <string name="route_4">Route 4</string>
    <string name="route_5">Route 5</string>
    <string name="returnToStart">Reenter Location or Destination</string>
    <string name="chosenRouteTime">travel time: </string>
    <string name="mapDescriptor">Will show the picture of the route on google maps</string>
    
    <string name="loginEmailInstruction">Enter your berkeley.edu email</string>
    <string name="loginPasswordInstruction">Password</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="emailRequirement">You must enter a berkeley email address in order to use this app.</string>
    <string name="disclaimer">DONT SUE US PLIS</string>
    <string name="disclaimerCheckbox">OK i wont sue you </string>
    
    <string-array name='gender'>
        <item>Male</item>
        <item>Female</item>
    </string-array>
        <string name="Male">Male</string>
        <string name="Gender">Gender</string>
        <string-array name="SortSetting">
            <item >Safety [Default]</item>
            <item >Time/Distance</item>
            <item >Placeholder</item>
        </string-array>
        <string name="SortSetting">SortSetting</string>
        
     <string name="Personal_Priorities">Personal Priorities: Rank each category between 1 and 10. 
         1 being the least concerning, 10 being the most concerning.</string>
     <string name="Sexual">Sexual</string>
     <string name="Physical">Physical</string>
     <string name="Theft">Theft</string>
    
</resources>
