<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background ="@drawable/nice_blue">

    <EditText
        style="@style/WhiteStuff"
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/loginEmailInstruction" 
        android:imeOptions="actionNext" />
        

        <requestFocus />

    <EditText
        style="@style/WhiteStuff"
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginPasswordInstruction"
        android:inputType="textPassword" 
        android:imeOptions="actionDone" />
        

    <CheckBox
        style="@style/WhiteStuff"
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me" />

    <Button
        style="@style/WhiteStuff"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkVerification"
        android:text="@string/Login" />

    <Button
        style="@style/WhiteStuff"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signup" 
        android:onClick="SignupProcess" />

    <ViewSwitcher
        style="@style/WhiteStuff"
        android:id="@+id/viewSwitcher1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ViewSwitcher>

</LinearLayout>
